@@ -26,32 +26,40 @@ public class RoadmapListResponse implements BaseApiResponse {
     private List<RoadmapListDTO> roadmaps;
 
     // 데이터 포함 반환
-    public static RoadmapListResponse of(List<Roadmap> roadmapEntities, Map<Long, Long> citationCountMap, Set<Long> bookmarkedRoadmapIds) {
+    public static RoadmapListResponse of(
+            List<Roadmap> roadmapEntities,
+            Map<Long, Long> citationCountMap,
+            Map<Long, Long> roadmapIdToBookmarkIdMap
+    ) {
         List<RoadmapListDTO> roadmapDtos = roadmapEntities.stream()
-            .map(r -> new RoadmapListDTO(
-                r.getId(),
-                new CategorySimpleDTO(r.getCategory()),
-                new MemberSimpleDTO(r.getMember()),
-                r.getTitle(),
-                r.getDescription(),
-                r.getThumbnail(),
-                r.getRoadmapMapHashtags().stream()
-                    .map(h -> new HashtagDTO(h.getHashtag().getId(), h.getHashtag().getName()))
-                    .collect(Collectors.toList()),
-                r.getIsPublic(),
-                r.getRoadmapType(),
-                r.getLikeCount(),
-                r.getViewCount(),
-                citationCountMap.getOrDefault(r.getId(), 0L).intValue(),
-                    r.getCreatedAt(),
-                    bookmarkedRoadmapIds.contains(r.getId())
-            )).toList();
+                .map(r -> {
+                    Long bookmarkId = roadmapIdToBookmarkIdMap.get(r.getId());
+                    return new RoadmapListDTO(
+                            r.getId(),
+                            new CategorySimpleDTO(r.getCategory()),
+                            new MemberSimpleDTO(r.getMember()),
+                            r.getTitle(),
+                            r.getDescription(),
+                            r.getThumbnail(),
+                            r.getRoadmapMapHashtags().stream()
+                                    .map(h -> new HashtagDTO(h.getHashtag().getId(), h.getHashtag().getName()))
+                                    .collect(Collectors.toList()),
+                            r.getIsPublic(),
+                            r.getRoadmapType(),
+                            r.getLikeCount(),
+                            r.getViewCount(),
+                            citationCountMap.getOrDefault(r.getId(), 0L).intValue(),
+                            r.getCreatedAt(),
+                            bookmarkId != null,    // isBookmarked
+                            bookmarkId             // bookmarkId 값 (있으면 포함)
+                    );
+                }).toList();
 
         return new RoadmapListResponse(
-            ResponseCode.OK.getCode(),
-            "로드맵 목록 조회 성공",
-            LocalDateTime.now(),
-            roadmapDtos
+                ResponseCode.OK.getCode(),
+                "로드맵 목록 조회 성공",
+                LocalDateTime.now(),
+                roadmapDtos
         );
     }
 }
